syntax = "proto3";

package stremio.core.runtime;

option java_package = "com.stremio.core.proto.runtime";

import "stremio/core/runtime/event.proto";

message EnvError{
  int32 code = 1;
  string message = 2;
}

message RuntimeEvent {
  oneof event {
    NewState new_state = 1;
    CoreEvent core_event = 2;
  }

  message NewState {
  }
  message CoreEvent{
    Event event = 1;
  }
}